# strolling_turtlebot

./: CMakeLists.txt  README.md  package.xml
include/strolling_turtlebot/: mover.hpp
launch/: strolling_turtlebot.launch
results/: cppcheck.txt  cpplint.txt
src/: mover.cpp  stroller.cpp
world/: closed.world
