cmake_minimum_required(VERSION 2.8.3)
project(strolling_turtlebot)

## Compile as C++11, supported in ROS Kinetic and newer
add_compile_options(-std=c++11)

find_package(catkin REQUIRED COMPONENTS
   roscpp 
   geometry_msgs 
   move_base_msgs
   sensor_msgs
)

catkin_package()

include_directories( include ${catkin_INCLUDE_DIRS})


add_executable(stroller include/strolling_turtlebot/mover.hpp src/mover.cpp src/stroller.cpp)


## Specify libraries to link a library or executable target against
target_link_libraries(stroller
   ${catkin_LIBRARIES}
 )

